--- a/issues/index.html
+++ b/issues/index.html
@@ -10,9 +10,9 @@ of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-
 31h
 16m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-01_020441_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 1 02:04:41 2024">July 1, 2024 at 02:04</small><h3>m.e. photography down</h3><div class=ok>Resolved after
 29m
-of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-01_020341_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 1 02:03:41 2024 UTC">July 1, 2024 at 02:03</small><h3>m.e. incidence down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-07-01_020341_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 1 02:03:41 2024">July 1, 2024 at 02:03</small><h3>m.e. vault down</h3><div class=ok>Resolved after
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-01_020341_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 1 02:03:41 2024">July 1, 2024 at 02:03</small><h3>m.e. incidence down</h3><div class=warning>Resolved after
+31h
+17m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-01_020341_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 1 02:03:41 2024">July 1, 2024 at 02:03</small><h3>m.e. vault down</h3><div class=ok>Resolved after
 30m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-01_020241_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 1 02:02:41 2024">July 1, 2024 at 02:02</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
 31m
