--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 3
 minutes at a time.</em></p><small class=faded>884 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-17_131141_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 17 13:11:41 2024 UTC">July 17, 2024 at 13:11</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-07-17_131041_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 17 13:10:41 2024 UTC">July 17, 2024 at 13:10</small><h3>m.e. incidence down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-07-17_130641_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 17 13:06:41 2024 UTC">July 17, 2024 at 13:06</small><h3>m.e. gallery down</h3><strong class=error>■
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-07-17_131041_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 17 13:10:41 2024">July 17, 2024 at 13:10</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
+6m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-07-17_130641_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 17 13:06:41 2024 UTC">July 17, 2024 at 13:06</small><h3>m.e. gallery down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
 <a href=https://moeb98.github.io/moe-cstate/issues/2024-07-17_125341_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 17 12:53:41 2024">July 17, 2024 at 12:53</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
 3m
