--- a/issues/index.html
+++ b/issues/index.html
@@ -8,9 +8,9 @@ This issue is not resolved yet</strong></a>
 2m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-08-28_002441_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Aug 28 00:24:41 2024">August 28, 2024 at 00:24</small><h3>m.e. doc down</h3><div class=ok>Resolved after
 2m
-of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-08-28_001241_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Aug 28 00:12:41 2024 UTC">August 28, 2024 at 00:12</small><h3>m.e. cloud down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-08-28_000141_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Aug 28 00:01:41 2024">August 28, 2024 at 00:01</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-08-28_001241_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Aug 28 00:12:41 2024">August 28, 2024 at 00:12</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
+22m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-08-28_000141_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Aug 28 00:01:41 2024">August 28, 2024 at 00:01</small><h3>m.e. doc down</h3><div class=ok>Resolved after
 8m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-08-28_000141_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Aug 28 00:01:41 2024">August 28, 2024 at 00:01</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 8m
