deploy: 76be28f3b82705a460ca0523e3f05c29523d9c82

--- a/issues/index.html
+++ b/issues/index.html
@@ -16,9 +16,9 @@ of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-
 This issue is not resolved yet</strong></a>
 <a href=https://moeb98.github.io/moe-cstate/issues/2024-09-22_071241_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 22 07:12:41 2024">September 22, 2024 at 07:12</small><h3>m.e. photography down</h3><div class=warning>Resolved after
 1h
-23m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-22_071041_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 22 07:10:41 2024 UTC">September 22, 2024 at 07:10</small><h3>m.e. cloud down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-22_023541_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 22 02:35:41 2024">September 22, 2024 at 02:35</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
+23m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-22_071041_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 22 07:10:41 2024">September 22, 2024 at 07:10</small><h3>m.e. cloud down</h3><div class=warning>Resolved after
+3h
+48m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-22_023541_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 22 02:35:41 2024">September 22, 2024 at 02:35</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
 3m
 of downtime</div></a><hr><div class=center><span class=faded>⭠ &nbsp;
 Previous</span>
