--- a/issues/index.html
+++ b/issues/index.html
@@ -4,9 +4,9 @@ minutes at a time.</em></p><small class=faded>1366 entries, newest to oldest</sm
 5m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_023841_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:38:41 2024">September 27, 2024 at 02:38</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
 6m
-of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_023841_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:38:41 2024 UTC">September 27, 2024 at 02:38</small><h3>m.e. doc down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_023841_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:38:41 2024">September 27, 2024 at 02:38</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_023841_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:38:41 2024">September 27, 2024 at 02:38</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+7m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_023841_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:38:41 2024">September 27, 2024 at 02:38</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 6m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_023741_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:37:41 2024">September 27, 2024 at 02:37</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
 6m
