deploy: 68d1ef6b30c012375aa6059efcc56031bf844053

--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 3
 minutes at a time.</em></p><small class=faded>1371 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_032441_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 03:24:41 2024 UTC">September 27, 2024 at 03:24</small><h3>m.e. gallery down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_032041_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 03:20:41 2024 UTC">September 27, 2024 at 03:20</small><h3>m.e. photography down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_025341_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:53:41 2024">September 27, 2024 at 02:53</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_032041_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 03:20:41 2024">September 27, 2024 at 03:20</small><h3>m.e. photography down</h3><div class=ok>Resolved after
+6m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_025341_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:53:41 2024">September 27, 2024 at 02:53</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
 2m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_025341_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 02:53:41 2024">September 27, 2024 at 02:53</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 3m
