deploy: 4f2268ecddffb312468c984ed10c502c6a26775d

--- a/issues/index.html
+++ b/issues/index.html
@@ -8,11 +8,11 @@ This issue is not resolved yet</strong></a>
 This issue is not resolved yet</strong></a>
 <a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064241_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:42:41 2024 UTC">September 28, 2024 at 06:42</small><h3>m.e. vault down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064141_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:41:41 2024 UTC">September 28, 2024 at 06:41</small><h3>m.e. gallery down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064141_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:41:41 2024 UTC">September 28, 2024 at 06:41</small><h3>m.e. photography down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_150241_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 15:02:41 2024">September 27, 2024 at 15:02</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064141_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:41:41 2024">September 28, 2024 at 06:41</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
+4m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064141_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:41:41 2024">September 28, 2024 at 06:41</small><h3>m.e. photography down</h3><div class=ok>Resolved after
+6m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_150241_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 15:02:41 2024">September 27, 2024 at 15:02</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
 2m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-27_122241_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 27 12:22:41 2024">September 27, 2024 at 12:22</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
 45m
