--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 3
 minutes at a time.</em></p><small class=faded>1389 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_070941_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 07:09:41 2024 UTC">September 28, 2024 at 07:09</small><h3>m.e. vault down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_070841_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 07:08:41 2024 UTC">September 28, 2024 at 07:08</small><h3>m.e. cloud down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064341_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:43:41 2024">September 28, 2024 at 06:43</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_070841_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 07:08:41 2024">September 28, 2024 at 07:08</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
+2m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064341_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:43:41 2024">September 28, 2024 at 06:43</small><h3>m.e. doc down</h3><div class=ok>Resolved after
 4m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_064341_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 06:43:41 2024">September 28, 2024 at 06:43</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 3m
