--- a/issues/index.html
+++ b/issues/index.html
@@ -8,11 +8,11 @@ This issue is not resolved yet</strong></a>
 This issue is not resolved yet</strong></a>
 <a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024 UTC">September 29, 2024 at 17:15</small><h3>m.e. vault down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024 UTC">September 29, 2024 at 17:14</small><h3>m.e. cloud down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024 UTC">September 29, 2024 at 17:14</small><h3>m.e. photography down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_070941_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 07:09:41 2024">September 28, 2024 at 07:09</small><h3>m.e. vault down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024">September 29, 2024 at 17:14</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
+3m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024">September 29, 2024 at 17:14</small><h3>m.e. photography down</h3><div class=ok>Resolved after
+3m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_070941_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 07:09:41 2024">September 28, 2024 at 07:09</small><h3>m.e. vault down</h3><div class=ok>Resolved after
 2m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-28_070841_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 28 07:08:41 2024">September 28, 2024 at 07:08</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
 2m
