deploy: 7ac311f0ef1a1307bdc71e7afe65e97b081092e4

--- a/issues/index.html
+++ b/issues/index.html
@@ -2,13 +2,13 @@
 2
 minutes at a time.</em></p><small class=faded>1394 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024 UTC">September 29, 2024 at 17:15</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024 UTC">September 29, 2024 at 17:15</small><h3>m.e. gallery down</h3><strong class=error>■
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024">September 29, 2024 at 17:15</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
+2m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024 UTC">September 29, 2024 at 17:15</small><h3>m.e. incidence down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024 UTC">September 29, 2024 at 17:15</small><h3>m.e. incidence down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024 UTC">September 29, 2024 at 17:15</small><h3>m.e. vault down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024">September 29, 2024 at 17:14</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171541_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:15:41 2024">September 29, 2024 at 17:15</small><h3>m.e. vault down</h3><div class=ok>Resolved after
+3m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024">September 29, 2024 at 17:14</small><h3>m.e. cloud down</h3><div class=ok>Resolved after
 3m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2024-09-29_171441_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Sep 29 17:14:41 2024">September 29, 2024 at 17:14</small><h3>m.e. photography down</h3><div class=ok>Resolved after
 3m
