--- a/issues/index.html
+++ b/issues/index.html
@@ -6,9 +6,9 @@ of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-
 6m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_010441_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:04:41 2025">February 27, 2025 at 01:04</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 6m
-of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_010441_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:04:41 2025 UTC">February 27, 2025 at 01:04</small><h3>m.e. vault down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_010341_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:03:41 2025">February 27, 2025 at 01:03</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_010441_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:04:41 2025">February 27, 2025 at 01:04</small><h3>m.e. vault down</h3><div class=ok>Resolved after
+9m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_010341_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:03:41 2025">February 27, 2025 at 01:03</small><h3>m.e. gallery down</h3><div class=ok>Resolved after
 7m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_010341_m.e.photography/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:03:41 2025">February 27, 2025 at 01:03</small><h3>m.e. photography down</h3><div class=ok>Resolved after
 7m
