deploy: c4241187caeb713fba6bd71c6aa60aae5402711f

--- a/issues/index.html
+++ b/issues/index.html
@@ -18,8 +18,9 @@ of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-
 1h
 33m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_013541_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:35:41 2025">February 27, 2025 at 01:35</small><h3>m.e. incidence down</h3><div class=warning>Resolved after
 1h
-40m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_013441_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:34:41 2025 UTC">February 27, 2025 at 01:34</small><h3>m.e. cloud down</h3><strong class=error>■
-This issue is not resolved yet</strong></a><hr><div class=center><span class=faded>⭠ &nbsp;
+40m of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-02-27_013441_m.e.cloud/ class="issue no-underline"><small class="date float-right relative-time" title="Feb 27 01:34:41 2025">February 27, 2025 at 01:34</small><h3>m.e. cloud down</h3><div class=warning>Resolved after
+17h
+53m of downtime</div></a><hr><div class=center><span class=faded>⭠ &nbsp;
 Previous</span>
 &nbsp; &nbsp;
 1
