--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 21
 minutes at a time.</em></p><small class=faded>1488 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_041541_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 04:15:41 2025 UTC">March 13, 2025 at 04:15</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_041341_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 04:13:41 2025 UTC">March 13, 2025 at 04:13</small><h3>m.e. incidence down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_041041_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 04:10:41 2025 UTC">March 13, 2025 at 04:10</small><h3>m.e. vault down</h3><strong class=error>■
+<a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_041341_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 04:13:41 2025">March 13, 2025 at 04:13</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
+4m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_041041_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 04:10:41 2025 UTC">March 13, 2025 at 04:10</small><h3>m.e. vault down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
 <a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_040441_m.e.vault/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 04:04:41 2025">March 13, 2025 at 04:04</small><h3>m.e. vault down</h3><div class=ok>Resolved after
 2m
