deploy: 3f416ccacb9c0b5a4d0ba565747fd0ef35ccd5d5

--- a/issues/index.html
+++ b/issues/index.html
@@ -18,8 +18,9 @@ of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-03-
 39m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_031641_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 03:16:41 2025">March 13, 2025 at 03:16</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 3m
-of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_030741_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 03:07:41 2025 UTC">March 13, 2025 at 03:07</small><h3>m.e. gallery down</h3><strong class=error>■
-This issue is not resolved yet</strong></a><hr><div class=center><span class=faded>⭠ &nbsp;
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-03-13_030741_m.e.gallery/ class="issue no-underline"><small class="date float-right relative-time" title="Mar 13 03:07:41 2025">March 13, 2025 at 03:07</small><h3>m.e. gallery down</h3><div class=warning>Resolved after
+3h
+14m of downtime</div></a><hr><div class=center><span class=faded>⭠ &nbsp;
 Previous</span>
 &nbsp; &nbsp;
 1
