--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 2
 minutes at a time.</em></p><small class=faded>1514 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-09_233041_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 9 23:30:41 2025 UTC">July 9, 2025 at 23:30</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-09_233041_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 9 23:30:41 2025 UTC">July 9, 2025 at 23:30</small><h3>m.e. incidence down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-09_230741_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 9 23:07:41 2025">July 9, 2025 at 23:07</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-09_233041_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 9 23:30:41 2025">July 9, 2025 at 23:30</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
+4m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-09_230741_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 9 23:07:41 2025">July 9, 2025 at 23:07</small><h3>m.e. doc down</h3><div class=ok>Resolved after
 3m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-06-30_114541_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jun 30 11:45:41 2025">June 30, 2025 at 11:45</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 2m
