--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 3
 minutes at a time.</em></p><small class=faded>1538 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_042041_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 04:20:41 2025 UTC">July 10, 2025 at 04:20</small><h3>m.e. incidence down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_041841_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 04:18:41 2025 UTC">July 10, 2025 at 04:18</small><h3>m.e. doc down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_033841_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 03:38:41 2025">July 10, 2025 at 03:38</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_041841_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 04:18:41 2025">July 10, 2025 at 04:18</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+5m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_033841_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 03:38:41 2025">July 10, 2025 at 03:38</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 3m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_033141_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 03:31:41 2025 UTC">July 10, 2025 at 03:31</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
