deploy: 9c34f0d121e14f0df99b11cc19cbdcb27bd0a601

--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 5
 minutes at a time.</em></p><small class=faded>1560 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_081141_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 08:11:41 2025">July 10, 2025 at 08:11</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 5m
-of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_081041_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 08:10:41 2025 UTC">July 10, 2025 at 08:10</small><h3>m.e. doc down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_071741_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 07:17:41 2025 UTC">July 10, 2025 at 07:17</small><h3>m.e. doc down</h3><strong class=error>■
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_081041_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 08:10:41 2025">July 10, 2025 at 08:10</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+8m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_071741_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 07:17:41 2025 UTC">July 10, 2025 at 07:17</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
 <a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_071741_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 07:17:41 2025">July 10, 2025 at 07:17</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 2m
