--- a/issues/index.html
+++ b/issues/index.html
@@ -2,9 +2,9 @@
 2
 minutes at a time.</em></p><small class=faded>1586 entries, newest to oldest</small><div class=padding></div><hr class=clean></div></header><div class="contain contain--more" id=incidents><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_122641_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 12:26:41 2025 UTC">July 10, 2025 at 12:26</small><h3>m.e. doc down</h3><strong class=error>■
 This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_122641_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 12:26:41 2025 UTC">July 10, 2025 at 12:26</small><h3>m.e. incidence down</h3><strong class=error>■
-This issue is not resolved yet</strong></a>
-<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_121441_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 12:14:41 2025">July 10, 2025 at 12:14</small><h3>m.e. doc down</h3><div class=ok>Resolved after
+<a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_122641_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 12:26:41 2025">July 10, 2025 at 12:26</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
+2m
+of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_121441_m.e.doc/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 12:14:41 2025">July 10, 2025 at 12:14</small><h3>m.e. doc down</h3><div class=ok>Resolved after
 3m
 of downtime</div></a><a href=https://moeb98.github.io/moe-cstate/issues/2025-07-10_121441_m.e.incidence/ class="issue no-underline"><small class="date float-right relative-time" title="Jul 10 12:14:41 2025">July 10, 2025 at 12:14</small><h3>m.e. incidence down</h3><div class=ok>Resolved after
 3m
